--- a/package.json
+++ b/package.json
@@ -12,15 +12,24 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@stripe/stripe-js": "^4.4.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "framer-motion": "^11.5.4",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.441.0",
     "mongoose": "^8.6.2",
-    "stripe": "^16.10.0"
+    "react-confetti": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.26.2",
+    "recharts": "^2.12.7",
+    "stripe": "^16.10.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
