--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
+    "nodemailer": "^6.9.15",
     "stripe": "^16.10.0"
   },
   "devDependencies": {
