--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "shop-store",
+  "name": "eco-mart",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon backend/server.js",
-    "start": "node backend/server.js"
+    "start": "node backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
