--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@stripe/stripe-js": "^4.5.0",
     "axios": "^1.7.7",
+    "eco-mart": "file:..",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
